--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,3 +27,12 @@ body {
 	border-radius: 10px;
 	padding: 5px;
 }
+
+/* Start of Top Menu */
+.game-name {
+	display: inline-flex;
+	font-size: 20px;
+	font-weight: 700;
+    margin-left: 10px;
+	margin-top: 12px;
+}
