--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,3 +36,19 @@ body {
     margin-left: 10px;
 	margin-top: 12px;
 }
+
+.button {
+    margin: 5px;
+    padding: 0.375rem 1rem;
+    font-size: 1.5rem;
+    border-radius: 1.25rem;
+    background-color: #006BA6;
+    border-color: transparent;
+	color: #E8E8E8;
+	display: inline-flex;
+}
+
+.button:hover {
+    background-color: #0496FF;
+    border-color: transparent;
+}
