--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,3 +61,20 @@ body {
 	margin-bottom: 8%;
 	font-size: 1.3rem;
 }
+
+/* Buttons */
+.game {
+	flex-wrap: wrap;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.game button {
+	background-color: #0496FF;
+	color: #E8E8E8;
+	border: none;
+	font-size: 1.2rem;
+	padding: 10px;
+	border-radius: 25px;
+}
