--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,6 +70,11 @@ body {
 	align-items: center;
 }
 
+.game > .game-options {
+	flex: 1 1 30%;
+    height: 100px;
+}
+
 .game button {
 	background-color: #0496FF;
 	color: #E8E8E8;
