--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,16 +81,16 @@ body {
 	text-align: center;
 }
   
-  /* The Close Button */
-.modal-close {
+  /* The Exit Button */
+.modal-exit {
 	color: #aaa;
 	float: right;
 	font-size: 28px;
 	font-weight: bold;
 }
   
-.modal-close:hover,
-.modal-close:focus {
+.modal-exit:hover,
+.modal-exit:focus {
 	color: black;
 	text-decoration: none;
 	cursor: pointer;
