--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
 	font-size: 20px;
 	font-weight: 700;
     margin-left: 10px;
-	margin-top: 12px;
+	margin-bottom: 12px;
 }
 
 .button {
@@ -178,3 +178,15 @@ body {
 	padding-bottom: 5px;
 }
 /* End of Guides */
+
+/* Media Queries to make website responsive */
+/* For anything below screens with 1414pxs */
+@media screen and (max-width: 1414px) {
+	.game-name {
+		text-align: center;
+		display: block;
+	}
+	.game-name > br {
+		display: none;
+	}
+}
