Add text align to nav buttons and game type H1.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,6 +114,11 @@ body {
 	font-size: 1.3rem;
 }
 
+/* Game type */
+#game-type {
+	text-align: center;
+}
+
 /* Buttons */
 .game {
 	flex-wrap: wrap;
