Change image width for guides inside media query so it fits the container in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,9 @@ body {
 	h3 {
 		font-size: 1.0rem;
 	}
+	.guides p > img {
+		width: 90%;
+	}
 }
 /* For anything below screens with 650pxs */
 @media screen and (max-width: 650px) {
